--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sssssssdk</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum dolores necessitatibus, odio quasi odit fugit eveniet est voluptas nihil magnam consequuntur similique ratione id voluptatem pariatur quia. Amet, corrupti beatae?</p>
 </body>
 </html>
