secend style add

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
     
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum dolores necessitatibus, odio quasi odit fugit eveniet est voluptas nihil magnam consequuntur similique ratione id voluptatem pariatur quia. Amet, corrupti beatae?</p>
+    <p class="j">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum dolores necessitatibus, odio quasi odit fugit eveniet est voluptas nihil magnam consequuntur similique ratione id voluptatem pariatur quia. Amet, corrupti beatae?</p>
+    <div>
+        <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptates molestiae repudiandae doloremque amet excepturi officiis ullam fugiat optio ipsa suscipit doloribus, ex facere dolores voluptatum veritatis velit, quod ipsum?</p>
+    </div>
+    <div>
+        <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptates molestiae repudiandae doloremque amet excepturi officiis ullam fugiat optio ipsa suscipit doloribus, ex facere dolores voluptatum veritatis velit, quod ipsum?</p>
+    </div>
+    <div>
+        <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptates molestiae repudiandae doloremque amet excepturi officiis ullam fugiat optio ipsa suscipit doloribus, ex facere dolores voluptatum veritatis velit, quod ipsum?</p>
+    </div>
+    <div>
+        <p class="j">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptates molestiae repudiandae doloremque amet excepturi officiis ullam fugiat optio ipsa suscipit doloribus, ex facere dolores voluptatum veritatis velit, quod ipsum?</p>
+    </div>
 </body>
 </html>
